--- a/pom.xml
+++ b/pom.xml
@@ -36,9 +36,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
-			<scope>runtime</scope>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.3.8</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
