--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/pagina_ambiente
-spring.datasource.username=root
+spring.datasource.url=jdbc:postgresql://localhost:5432/pagina_ambiente
+spring.datasource.username=postgres
 spring.datasource.password=lokimikaluna
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database=mysql
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database=POSTGRESQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 #Show SQL
