--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.jpa.properties.hibernate.show_sql=true
 
 #Format SQL
 spring.jpa.properties.hibernate.format_sql=true
+
+#Security
+spring.security.user.name = pablo
+spring.security.user.password = 12345678
+spring.security.user.roles = ADMIN
