se cambia dependencias y base a datos a oracle cloud database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/pagina_ambiente
-spring.datasource.username=postgres
-spring.datasource.password=lokimikaluna
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database=POSTGRESQL
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@obt0s45ywcgwslng_medium?TNS_ADMIN=/Users/BANGHO/Desktop/TrabajoAmbiente/api-ambiente/src/main/resources/Wallet_OBT0S45YWCGWSLNG
+spring.datasource.username=ADMIN
+spring.datasource.password=Floripa@1991
+spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 spring.jpa.hibernate.ddl-auto=update
 
 #Show SQL
