--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 !**/src/main/resources/application.properties
+!**/src/main/resources/Wallet_OBT0S45YWCGWSLNG/
 
 ### STS ###
 .apt_generated
