--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<version>3.2.3</version>
 			<!--<scope>provided</scope>-->
 		</dependency>
 		<dependency>
@@ -42,21 +43,18 @@
 			<version>3.2.2</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>42.7.2</version>
-		</dependency>
 		<!--SEGURIDAD-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 			<version>3.1.5</version>
 		</dependency>
+		<!--BASE DE DATOS-->
 		<dependency>
-			<groupId>jakarta.validation</groupId>
-			<artifactId>jakarta.validation-api</artifactId>
-			<version>3.0.2</version>
+			<groupId>com.oracle.database.jdbc</groupId>
+			<artifactId>ojdbc11-production</artifactId>
+			<version>21.5.0.0</version>
+			<type>pom</type>
 		</dependency>
 	</dependencies>
 
