--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,9 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-!**/src/main/resources/application.properties
-!**/src/main/resources/Wallet_OBT0S45YWCGWSLNG/
+
+src/main/resources/application.properties
+src/main/resources/Wallet_OBT0S45YWCGWSLNG/
 
 ### STS ###
 .apt_generated
